# aiidalab-chemshell

./: .gitignore  CITATION.cff  LICENSE  README  README.md  main.ipynb  setup.cfg  start.py
.github/workflows/: ci-docs-testing.yml  ci-docs.yml  ci-release.yml  ci-testing.yml
docker/aiidalab/: 61_prepare_aiidalab_chemshell.sh  Dockerfile
docker/base/: 61_prepare_aiidalab_chemshell.sh  Dockerfile
docker/chemshell/: 62_setup_chemsh.sh  Dockerfile  chemsh.yml
docker/full/: 62_setup_chemsh.sh  Dockerfile  chemsh.yml
docs/source/: conf.py  index.rst
docs/source/api_docs/: modules.rst
docs/source/user_guide/: getting_started.rst  history_page.rst  node_viewers.rst  resource_management.rst  workflows.rst
notebooks/: history.ipynb  main.ipynb  resources.ipynb
src/aiidalab_chemshell/: __init__.py  history.py  main.py  process.py  resources.py  structure.py  utils.py  workflow.py
src/aiidalab_chemshell/common/: __init__.py  chemshell.py  database.py  file_handling.py  navigation.py  node_viewers.py  structure_viewer.py  utils.py
src/aiidalab_chemshell/models/: __init__.py  process.py  resources.py  results.py  structure.py  workflow.py
src/aiidalab_chemshell/wizards/: __init__.py  main_app.py  resources.py  results.py  structure.py
src/aiidalab_chemshell/wizards/workflows/: __init__.py  geometry_optimisation.py  isolated_atoms.py  main_view.py  neb.py  single_point.py
tests/: test_base.py
