[aiidalab]
title = AiiDAlab ChemShell

[metadata]
name = aiidalab-chemshell 
version = 0.0.1-alpha 
author = Dr. Benjamin T. Speake 
author_email = benjamin.speake@stfc.ac.uk
description = AiiDAlab application for ChemShell based workflows 
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/stfc/aiidalab-chemshell
project_urls = 
    Logo = https://raw.githubusercontent.com/stfc/aiidalab-chemshell/refs/heads/main/images/alc-100.webp
    Source = https://github.com/stfc/aiidalab-chemshell
    Bug Tracker = https://github.com/stfc/aiidalab-chemshell/issues
classifiers = 
    Framework :: AiiDA 
    Operating System :: OS Independent
    Programming Language :: Python :: 3  


[options]
package_dir = 
    = src
packages = find:
install_requires = 
    aiida-core
    aiidalab-widgets-base 

python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest>=8.0 
    pytest-cov>=6.0
    ruff>=0.11.0
    pre-commit

docs = 
    sphinx>=8.0.2 
    piccolo-theme>=0.14.0 
    sphinx-toolbox
    numpydoc 
