[aiidalab]
title = ChemShell
categories =
    Classical
    Quantum

[metadata]
name = aiidalab-chemshell 
version = 0.0.1
author = Dr. Benjamin T. Speake 
author_email = benjamin.speake@stfc.ac.uk
description = ChemShell plugin for the AiiDAlab web-based UI framework enabling complex multi-scale chemical modelling workflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stfc/aiidalab-chemshell
project_urls = 
    Logo = https://raw.githubusercontent.com/stfc/aiidalab-chemshell/refs/heads/main/images/alc.svg
    Source = https://github.com/stfc/aiidalab-chemshell
    Bug Tracker = https://github.com/stfc/aiidalab-chemshell/issues
    Documentation = https://stfc.github.io/aiidalab-chemshell
classifiers =
    Framework :: AiiDA
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
license_file = LICENSE


[options]
package_dir = 
    = src
packages = find:
install_requires =
    aiida-core
    aiidalab-widgets-base
    aiida-chemshell>=0.1.5

python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest>=8.0 
    pytest-cov>=6.0
    ruff>=0.11.0
    pre-commit

docs =
    sphinx>=8.0.2 
    piccolo-theme>=0.14.0
    sphinx-toolbox
    numpydoc
